--- a/package.json
+++ b/package.json
@@ -61,7 +61,10 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "latest",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "geist": "1.5.1",
+    "@vercel/analytics": "1.5.0",
+    "react-hot-toast": "2.6.0"
   },
   "devDependencies": {
     "@types/node": "^22",
