--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "geist": "1.5.1",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "^15.5.6",
     "next-themes": "latest",
     "react": "^18.3.1",
     "react-day-picker": "latest",
